# objectstash

./: .gitignore  README.md
objectstash/: pyproject.toml
objectstash/docs/: conf.py  index.rst
objectstash/objectstash/: __init__.py  fs_adapter.py  objectstash.py  s3_adapter.py  storage_adapter.py
objectstash/tests/: test_objectstash.py
