[tool.poetry]
name = "objectstash"
version = "0.1.1"
description = "A wrapper around object stores."
license = "MIT"
authors = ["Ludwig Schmidt <ludwigschmidt2@gmail.com>", "Vaishaal Shankar <vaishaal@gmail.com>"]
homepage = "https://github.com/ludwigschmidt/objectstash"
repository = "https://github.com/ludwigschmidt/objectstash"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.14.38"
loguru = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
moto = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
